syntax = "proto3";
package groom;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message RoomRegistrationRequest{
    string room_name=1;
}

message RoomRegistrationResponse{
    int32 room_id=1;
}

message NewsFlash{
    google.protobuf.Timestamp news_time=1;
    string news_item =2;
}

message NewsStreamStatus{
    bool success=1;
}

message ReceivedMessage{
    google.protobuf.Timestamp news_time=1;
    string contents=2;
    string user=3;
}

service GroomS{
    rpc RegisterGroom(RoomRegistrationRequest) returns (RoomRegistrationResponse);
    rpc SendNewsFlash(stream NewsFlash) returns (NewsStreamStatus);
    rpc StartMonitoring(google.protobuf.Empty) returns (stream ReceivedMessage);
}